--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
           <version>3.8.0</version>
         </plugin>
         <plugin>
+    <inherited>true</inherited>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>              
+</plugin>
+        <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
