--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
           <version>3.8.0</version>
           <configuration>
 <source>1.8</source>
-<target> 1.8</target?
+<target> 1.8</target>
 </configuration>
         </plugin>
         <plugin>
